Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50337

WinRT: Applications do not close properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.0
    • 5.6.0 Beta
    • Other
    • None
    • Win10 MSVC2015
    • WinRT
    • 2b1f01426c1ee47474b4b8e4e53799d992d0711c

      There is multiple issues here.

      1. Applications do not exit in release mode
      2. AutoTrim does not work inside of Angle

      2. might be related to applications not closing.

      Suspend is happening inside qwinrtintegration, but the exit itself does not happen. This is either due to the suspend handler in angle not being invoked or something else.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mkalinow Maurice Kalinowski
            mkalinow Maurice Kalinowski
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes